# pytmThreatModeling

./: .coveragerc  .flake8  .gitignore  MANIFEST.in  README.md  capec_mitre_results.json  developer.md  implemented_mitigations.txt  main_analysis.py  pyproject.toml  requirements-dev.txt  requirements.txt  styleguide.md  temp_ansible_test.yml  threat_model.md
docs/: Home.md  Roadmap.md
technical_documentation/: technical_documentation.md
tests/: conftest.py  performance_test_full_app.py  performance_test_module.py  test_ansible_playbooks.py  test_attack_flow_generator.py  test_attack_navigator_generator.py  test_core_mitre_static_maps.py  test_custom_threats.py  test_diagram_generator.py  test_framework_mitigation_suggestions.py  test_iac_plugins.py  test_mitigation_suggestions.py  test_mitre_mapping_module.py  test_model_parser.py  test_model_validator.py  test_models_module.py  test_project_generation.py  test_report_generator.py  test_server.py  test_stix_generator.py  test_stix_mitigation_suggestions.py  test_threat_model_service.py  test_utils.py
threatModel_Template/: Architecture_Cloud_Native.md  CI_CD_Pipeline.md  Cloud_Native_Architecture.md  Data_Warehouse_Data_Lake.md  IoT.md  Microservices_Architecture.md  Mobile_Application.md  Pipeline_CI_CD.md  Réseau_d_Entreprise_Traditionnel.md  Simple_Monolithic_Web_Application.md  Three_Tier_Architecture.md  Traditional_Enterprise_Network.md  Zero_Trust.md  base_protocol_styles.md  nested_zones_template.md  threat_model.md
threat_analysis/: __init__.py  __main__.py  config.py  custom_threats.py  model_parser.py  (+9 more)
(+90 files in other folders)
